Resources/Public/CSS/opac-ng.css
.tx_find .ctg-dtvt-details span {
    margin: 0;
    padding: 0;
}

.tx_find .ctg-dtvt-details li {
    /*margin: 0;*/
    /*padding: 0;*/
}


.tx_find .ctg-dtvt-details ol {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

.tx_find .ctg-dtvt-details ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

.tx_find .ctg-dtvt-details p {
    margin: 0;
    padding: 0;
}

canvas#myChart {
    cursor: pointer;
}

.noUi-connect {
    background: #dadada !important;
}

.histogram-slider-input {
    width: 50px !important;
    display: inline !important;
}

.histogram-input-right {
    float:right;
}

#myHistogram {
    padding-bottom: 5px;
}

#from-histogramm {
    float:left;
}

#till-histogramm {
    float:right;
}

.histogram-inputs {
    padding-top:10px;
    padding-bottom: 50px;
}

.noUi-connect-active {
    background-color:#b61f24 !important;
}

.ctg-facet li em {
    padding-left: 5px;
}

.image-container {
    width: 60%;
    margin-left: auto;
    margin-right: auto;
}

.tx_find em.highlight {
    font-style: normal !important;
    color: #c50017 !important;
}

ul.token-input-list {
    display: inline-block;
}
section.active-facets {
    background-color: #b51f23;
    color: white;
}

section.active-facets h3 {
    color: white;
}

section.active-facets a {
    color: white;
}

section.active-facets a:hover {
    color: #aeaeae;
    text-decoration: underline;
}

.active-facet-container {
    padding-top:0px !important;
}

.ctg-catalog-title a {
    color: #fff;
    text-decoration: none;
}

.ctg-catalog-title a:hover {
    color: #aeaeae;
    text-decoration: underline;
}

.active-facet-hr {
    margin: 0.5rem;
}

.active-facet-reset {
    margin-bottom:10px;
}

ul.token-input-list {
    display: inline-block;
}

#beta-button {
    /*position: absolute;*/
    top: 10px;
    right: 30px;
    background-color: #c50017;
    color: white;
    padding: 10px;
    border-radius: 5px;
}

#beta-button a {
    color: white;
    text-decoration: none;
}

.copy-details {
    display: table-row;
}

.decisiontree-person {
    margin-left: 0.5rem;
}

ul.rolerelation {
    margin-bottom: 1rem !important;
}

ul.rolerelation li {
    margin-left: 1rem;
}

.rolerelation hr {
    border-width: 2px 0 0;
}

a.activeFacet {
    font-weight: bold;
}

a.facetText {
    width:100%;
}


.order-overlay {
    display: none;
    position: absolute;
    left: 0px;
    top: 0px;
    right: 0px;
    background: #ffffffeb;
    height: 100%;
    padding-top: 150px;
    padding: 1rem;
    z-index: 1;
}

.close-button {
    position: absolute;
    right: 0px;
}

.close-button a {
    text-decoration:none;
}

.order-overlay-button {
    padding: 3px !important;
    margin-top: 1rem !important;
}

.order-overlay button.confirm {
    display: none;
    background-color:#b61e24;
    color:#ffffff;
    padding:10px;
    margin-top: 15px;
}

.action-copied-info {
    display: none;
    position: absolute;
    right: 1rem;
    top: 60px;
    padding: 5px;
    background-color: #dadada;
    color: #464646;
    border: 1px solid #b1b1b1;
    z-index: 9;
    min-width: 50%;
    text-align: center;
}

.action-copied-info input {
    background-color: #ffffff !important;
}

.action-copied-success {
    display: none;
    background-color: #75b61e !important;
}

.action-copied-info-button {
    width: 120px;
    border-top: 1px solid #aeaeae;
    background-color: #b61f24;
    color: #fff;
    margin: 0;
    padding: 0.5rem 0.5rem 0.5rem 0;
    height: 2rem;
    font-size: 100%;
    text-decoration: none;
    margin-top: 1rem;
}

article.detail em.highlight {
    font-weight: inherit !important;
    color: #333333 !important;
}

@media only screen and (max-width: 2560px) {
    .ctg-catalog-title span.icon {
        font-size: 2rem;
        margin-right: 10px;
    }
}

@media only screen and (max-width: 1000px) {
    .ctg-catalog-title span.icon {
        font-size: 2rem;
        margin-right: 10px;
    }
}

@media only screen and (max-width: 650px) {
    .ctg-catalog-title span.icon {
        font-size: 3rem;
    }
}

